--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,9 @@ jobs:
       - run:
           name: "GMAO_Shared branch"
           command: echo ${CIRCLE_BRANCH}
-      - checkout:
-          path: GEOSgcm
       - circleci-tools/versions:
           compiler: << parameters.compiler >>
+      - circleci-tools/checkout_fixture
       - circleci-tools/mepoclone
       - circleci-tools/mepodevelop
       - circleci-tools/checkout_if_exists
