copy from https://github.com/GEOS-ESM/GMAO_Shared/tree/main/GEOS_Util/pre/NSIDC-OSTIA_SST-ICE_blend and clean up a bit

--- a/GEOS_Util/pre/prepare_ocnExtData/CMakeLists.txt
+++ b/GEOS_Util/pre/prepare_ocnExtData/CMakeLists.txt
@@ -1,13 +1,42 @@
 esma_set_this()
 
-#set ( srcs
-#  )
+set ( srcs
+  sst_ice_helpers.F90
+  )
 
-#esma_add_library (${this} SRCS ${srcs} DEPENDENCIES MAPL)
-#target_link_libraries (${this} PUBLIC ${NETCDF_LIBRARIES})
-#target_include_directories (${this} PUBLIC ${INC_NETCDF})
+esma_add_library (${this} SRCS ${srcs} DEPENDENCIES MAPL)
+target_link_libraries (${this} PUBLIC ${NETCDF_LIBRARIES})
+target_include_directories (${this} PUBLIC ${INC_NETCDF})
 
+set (pyscripts
+  ocnExtData_utils.py
+  write_kPAR.py
+  )
+
+ecbuild_add_executable (
+  TARGET sst_sic_eight.x
+  SOURCES proc_SST_FRACI_eight.F90
+  LIBS ${this})
+set_target_properties(sst_sic_eight.x PROPERTIES Fortran_MODULE_DIRECTORY ${include_${this}})
+
+ecbuild_add_executable (
+  TARGET sst_sic_quart.x
+  SOURCES proc_SST_FRACI_quart.F90
+  LIBS ${this})
+set_target_properties(sst_sic_quart.x PROPERTIES Fortran_MODULE_DIRECTORY ${include_${this}})
+
+if (USE_F2PY)
+   find_package(F2PY2)
+   if (F2PY2_FOUND)
+      esma_add_f2py2_module(read_sst_ice_bcs
+         SOURCES read_sst_ice_bin.f90
+         DESTINATION bin
+         INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
+         )
+      add_dependencies(read_sst_ice_bcs ${this})
+   endif ()
+endif ()
 
 file(GLOB cshscripts CONFIGURE_DEPENDS *.csh)
 file(GLOB perlscripts CONFIGURE_DEPENDS *.pl)
-install(PROGRAMS ${cshscripts} ${perlscripts} DESTINATION bin)
+install(PROGRAMS ${cshscripts} ${perlscripts} ${pyscripts} DESTINATION bin)
