1. name change of utils, 2. more doc, 3. add binary file plotter

--- a/GEOS_Util/pre/prepare_ocnExtData/CMakeLists.txt
+++ b/GEOS_Util/pre/prepare_ocnExtData/CMakeLists.txt
@@ -9,6 +9,7 @@ target_link_libraries (${this} PUBLIC ${NETCDF_LIBRARIES})
 target_include_directories (${this} PUBLIC ${INC_NETCDF})
 
 set (pyscripts
+  plot_binary_sst_ice.py
   ocnExtData_utils.py
   write_kPAR.py
   )
